Add boilerplate html to file

--- a/recipes/old-fashioned.html
+++ b/recipes/old-fashioned.html
@@ -1,25 +1,32 @@
-<h1>Old Fashioned<h1>
-  <img src="../images/old_fashioned.jpg" alt="Old-Fashioned cocktail on a tray with bottle in the background">
-<h2>Description</h2>
-  <p>This is a "foundational" cocktail, meaning it's one of the first that many people learn. It's a true classic that was first invented in Louisville, KY.</p>It is simplicity itself. The cocktail is typically made with Bourbon or rye, sugar and bitters. Some people use simple syrup in place of a more traditional sugar cube. 
-<h3>Ingredients</h3>
-  <ul>
-    <li>1 sugar cube</li>
-    <li>1 tsp water</li>
-    <li>4 dashes bitters</li>
-    <li>1.5 fl oz bourbon</li>
-    <li>1 maraschino cherry</li>
-    <li>1 orange peel</li>
-    <li>1 large ice cube</li>
-  </ul>
-<h3>Steps</h3>
-  <ol>
-    <li>Place the sugar cube in the bottom of a rocks glass.</li>
-    <li>Add bitters.</li>
-    <li>Add water.</li>
-    <li>Crush the sugar with a muller.</li>
-    <li>Add bourbon.</li>
-    <li>Stir.
-    <li>Add ice cube.</li>
-    <li>Garnish with orange peel and cheery.</li>  
-  </ol>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Old Fashioned</title>
+</head>
+<body>
+  <h1>Old Fashioned</h1>
+    <img src="../images/old_fashioned.jpg" alt="Old-Fashioned cocktail on a tray with bottle in the background">
+  <h2>Description</h2>
+    <p>This is a "foundational" cocktail, meaning it's one of the first that many people learn. It's a true classic that was first invented in Louisville, KY.</p>It is simplicity itself. The cocktail is typically made with Bourbon or rye, sugar and bitters. Some people use simple syrup in place of a more traditional sugar cube. 
+  <h3>Ingredients</h3>
+    <ul>
+      <li>1 sugar cube</li>
+      <li>1 tsp water</li>
+      <li>4 dashes bitters</li>
+      <li>1.5 fl oz bourbon</li>
+      <li>1 maraschino cherry</li>
+      <li>1 orange peel</li>
+      <li>1 large ice cube</li>
+    </ul>
+  <h3>Steps</h3>
+    <ol>
+      <li>Place the sugar cube in the bottom of a rocks glass.</li>
+      <li>Add bitters.</li>
+      <li>Add water.</li>
+      <li>Crush the sugar with a muller.</li>
+      <li>Add bourbon.</li>
+      <li>Stir.
+      <li>Add ice cube.</li>
+      <li>Garnish with orange peel and cheery.</li>  
+    </ol>
