--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 </head>
 <body>
   <h1>Odin Recipes</h1>
-    <a href="recipes/old-fashioned.html">Old Fashioned</a>
-
-
+    <ul>
+      <li><a href="recipes/old-fashioned.html">Old Fashioned</a></li>
+      <li><a href="recipes/chicken-and-broccoli.html">Chicken and Broccoli</a></li>
+    </ul>
 </body>
 </html>
