Add chick and broc html, modify old fashioned

--- a/recipes/chicken-and-broccoli.html
+++ b/recipes/chicken-and-broccoli.html
@@ -6,3 +6,28 @@
 </head>
 <body>
   <h1>Chicken and Broccoli</h1>
+    <img src="../images/chkandbroc.jpg">
+  <h2>Description</h2>
+    <p>This is a quick and dirty favorite of mine. It requires very little know-how.</p>
+    
+    <p>My girlfriend is aghast at my cooking. I'm essentially making meat hot and vegetables soft then burying the result in hot sauce.</p>
+  <h3>Ingredients</h3>
+    <ul>
+      <li>2 lbs. Chicken Breast</li>
+      <li>1 lbs. Frozen Broccoli</li>
+      <li>2 tbsp Olive Oil </li>
+      <li>Salt and Pepper</li>
+      <li>Hot Sauce of choice</li>
+    </ul>
+  <h3>Steps</h3>
+    <ol>
+      <li>Heat the oil on medium-high heat in a large skillet</li>
+      <li>Cut the chicken breast into large chunks and season liberally with S&P</li>
+      <li>Cook the chicken until there's just a little pink in the middle</li>
+      <li>Add the frozen broccoli</li>
+      <li>Put on lid and cook until the broccoli is soft</li>
+      <li>Check to make sure the chicken is cooked all the way through. No pink!</li>
+      <li>Plate the food and obliterate it with hot sauce</li>
+    </ol>
+</body>
+</html>
