--- a/recipes/old-fashioned.html
+++ b/recipes/old-fashioned.html
@@ -8,7 +8,9 @@
   <h1>Old Fashioned</h1>
     <img src="../images/old_fashioned.jpg" alt="Old-Fashioned cocktail on a tray with bottle in the background">
   <h2>Description</h2>
-    <p>This is a "foundational" cocktail, meaning it's one of the first that many people learn. It's a true classic that was first invented in Louisville, KY.</p>It is simplicity itself. The cocktail is typically made with Bourbon or rye, sugar and bitters. Some people use simple syrup in place of a more traditional sugar cube. 
+    <p>This is a "foundational" cocktail, meaning it's one of the first that many people learn. It's a true classic that was first invented in Louisville, KY.</p>
+    
+    <p>It is simplicity itself. The cocktail is typically made with Bourbon or rye, sugar and bitters. Some people use simple syrup in place of a more traditional sugar cube.</p> 
   <h3>Ingredients</h3>
     <ul>
       <li>1 sugar cube</li>
