--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
       <li><a href="recipes/old-fashioned.html">Old Fashioned</a></li>
       <li><a href="recipes/chicken-and-broccoli.html">Chicken and Broccoli</a></li>
+      <li><a href="recipes/spaghetti.html">Spaghetti</a>
     </ul>
 </body>
 </html>
