Add css styling

--- a/recipes/chicken-and-broccoli.html
+++ b/recipes/chicken-and-broccoli.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Chicken and Broccoli</h1>
-    <img src="../images/chkandbroc.jpg">
+    <img src="../images/chkandbroc.jpg" style="height: auto; width: 400px;">
   <h2>Description</h2>
     <p>This is a quick and dirty favorite of mine. It requires very little know-how.</p>
     
