--- a/recipes/old-fashioned.html
+++ b/recipes/old-fashioned.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Old Fashioned</h1>
-    <img src="../images/old_fashioned.jpg" alt="Old-Fashioned cocktail on a tray with bottle in the background">
+    <img src="../images/old_fashioned.jpg" alt="Old-Fashioned cocktail on a tray with bottle in the background" style="height: auto; width: 400px;">
   <h2>Description</h2>
     <p>This is a "foundational" cocktail, meaning it's one of the first that many people learn. It's a true classic that was first invented in Louisville, KY.</p>
     
