--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Spaghetti</h1>
-    <img src="../images/spaghetti.jpg" alt="Plate of spaghetti">
+    <img src="../images/spaghetti.jpg" alt="Plate of spaghetti" style="height: auto; width: 400px;">
   <h2>Description</h2>
     <p>This is an instant classic! Nothing wrong with good 'ol spaghetti. This is hard to screw up.</p>
 
