--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <link rel="stylesheet" href="styles.css"
 </head>
 <body>
-  <h1>Odin Recipes</h1>
+  <h1 class="title">Odin Recipes</h1>
+  <img src="./images/odin.jpg">
     <ul>
       <li><a href="recipes/old-fashioned.html">Old Fashioned</a></li>
       <li><a href="recipes/chicken-and-broccoli.html">Chicken and Broccoli</a></li>
