--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>Odin Recipes</title>
-  <link rel="stylesheet" href="styles.css"
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1 class="title">Odin Recipes</h1>
-  <img src="./images/odin.jpg">
-    <ul>
+  <h1 id="title">Odin Recipes</h1>
+  <img src="./images/odin.jpg" alt="Odin the greek god">
+    <ul id="reg-list">
       <li><a href="recipes/old-fashioned.html">Old Fashioned</a></li>
       <li><a href="recipes/chicken-and-broccoli.html">Chicken and Broccoli</a></li>
       <li><a href="recipes/spaghetti.html">Spaghetti</a>
