--- a/recipes/chicken-and-broccoli.html
+++ b/recipes/chicken-and-broccoli.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title>Chicken and Broccoli</title>
+  <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-  <h1>Chicken and Broccoli</h1>
-    <img src="../images/chkandbroc.jpg" style="height: auto; width: 400px;">
+  <h1 id="chik">Chicken and Broccoli</h1>
+    <img src="../images/chkandbroc.jpg" alt="Plate of chicken and broccoli">
   <h2>Description</h2>
     <p>This is a quick and dirty favorite of mine. It requires very little know-how.</p>
     
     <p>My girlfriend is aghast at my cooking. I'm essentially making meat hot and vegetables soft then burying the result in hot sauce.</p>
   <h3>Ingredients</h3>
-    <ul>
+    <ul class="recipe-list">
       <li>2 lbs. Chicken Breast</li>
       <li>1 lbs. Frozen Broccoli</li>
       <li>2 tbsp Olive Oil </li>
