--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="utf-8">
   <title>Spaghetti</title>
+  <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-  <h1>Spaghetti</h1>
-    <img src="../images/spaghetti.jpg" alt="Plate of spaghetti" style="height: auto; width: 400px;">
-  <h2>Description</h2>
+  <h1 id="spag">Spaghetti</h1>
+    <img src="../images/spaghetti.jpg" alt="Plate of spaghetti">
     <p>This is an instant classic! Nothing wrong with good 'ol spaghetti. This is hard to screw up.</p>
 
     <p>Any kind of noodles will do. Any kind of sauce will do. Once again, we're going to cover a multitude of sins with the hot sauce here. We won't behave like total heathens, though. We will cook the pasta appropriately.</p>
   <h3>Ingredients</h3>
-    <ul>
+    <ul class="recipe-list">
       <li>1 box Noodles</li>
       <li>1 jar Pasta Sauce</li>
       <li>Salt</li>
