--- a/recipes/old-fashioned.html
+++ b/recipes/old-fashioned.html
@@ -3,16 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title>Old Fashioned</title>
+  <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-  <h1>Old Fashioned</h1>
-    <img src="../images/old_fashioned.jpg" alt="Old-Fashioned cocktail on a tray with bottle in the background" style="height: auto; width: 400px;">
+  <h1 id="old">Old Fashioned</h1>
+    <img src="../images/old_fashioned.jpg" alt="Old-Fashioned cocktail on a tray with bottle in the background">
   <h2>Description</h2>
     <p>This is a "foundational" cocktail, meaning it's one of the first that many people learn. It's a true classic that was first invented in Louisville, KY.</p>
     
     <p>It is simplicity itself. The cocktail is typically made with Bourbon or rye, sugar and bitters. Some people use simple syrup in place of a more traditional sugar cube.</p> 
   <h3>Ingredients</h3>
-    <ul>
+    <ul class="recipe-list">
       <li>1 sugar cube</li>
       <li>1 tsp water</li>
       <li>4 dashes bitters</li>
