--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1 id="title">Odin Recipes</h1>
-  <img src="./images/odin.jpg" alt="Odin the greek god">
+  <img src="./images/odin.jpg" alt="Odin the norse god" class="odin">
     <ul id="reg-list">
       <li><a href="recipes/old-fashioned.html">Old Fashioned</a></li>
       <li><a href="recipes/chicken-and-broccoli.html">Chicken and Broccoli</a></li>
